Fix keyboard access for windows system tray menus.

The fix is to make menus without a parent widget take focus when run.

Bug: 837520
Change-Id: I2dd286e4b10051c8a4fa460f1187eef8292cf517
Reviewed-on: https://chromium-review.googlesource.com/1142201
Commit-Queue: David Bienvenu <davidbienvenu@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579041}
Former-commit-id: 1dc120ad70c9984e5580546f89818ea2477055a6