ui/views/controls/menu/menu_host.cc
@@ -126,6 +126,11 @@ void MenuHost::InitMenuHost(Widget* parent,
       Widget::InitParams::OPAQUE_WINDOW;
   params.parent = parent ? parent->GetNativeView() : NULL;
   params.bounds = bounds;
+  // If MenuHost has no parent widget, it needs to be marked
+  // Activatable, so that calling Show in ShowMenuHost will
+  // get keyboard focus.
+  if (parent == nullptr)
+    params.activatable = Widget::InitParams::ACTIVATABLE_YES;
 #if defined(OS_WIN)
   // On Windows use the software compositor to ensure that we don't block
   // the UI thread blocking issue during command buffer creation. We can
@@ -173,6 +178,10 @@ void MenuHost::ShowMenuHost(bool do_capture) {
     // events due to the menu taking capture.
     ui::GestureRecognizer::Get()->CancelActiveTouchesExcept(nullptr);
 #endif  // defined (OS_MACOSX)
+    // If MenuHost has no parent widget, it needs to call Show to get focus,
+    // so that it will get keyboard events.
+    if (owner_ == nullptr)
+      Show();
     native_widget_private()->SetCapture();
   }
 }
